Fix h2 width on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -165,11 +165,23 @@ css in bootstrap*/
   left: 0px;
 }
 
+@media screen and (max-width: 600px) {
+  h2 {
+    font-size: 35px;
+    padding-bottom: 30px;
+    letter-spacing: 2px;
+  }
+
+}
+
+@media screen and (min-width: 601px) {
 h2 {
   font-size: 50px;
   padding-bottom: 50px;
   letter-spacing: 5px;
 }
+}
+
 
 .squareContent h2 {
   font-size: 40px;
